Bug 68361 - [6 regression] Bootstrap failure with --enable-checking=release
Summary: [6 regression] Bootstrap failure with --enable-checking=release
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: bootstrap (show other bugs)
Version: 6.0
: P3 normal
Target Milestone: 6.0
Assignee: Not yet assigned to anyone
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-11-15 14:43 UTC by Andreas Schwab
Modified: 2016-01-05 02:01 UTC (History)
3 users (show)

See Also:
Host:
Target:
Build:
Known to work:
Known to fail:
Last reconfirmed: 2015-11-17 00:00:00


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Andreas Schwab 2015-11-15 14:43:18 UTC
When building with --enable-checking=release:

../../gcc/gcc/cp/tree.c: In function ‘tree_node* build_cplus_array_type(tree, tree)’:
../../gcc/gcc/cp/tree.c:894:44: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
        = TYPE_NEEDS_CONSTRUCTING (elt_type));
                                            ^

../../gcc/gcc/cp/tree.c:896:51: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
        = TYPE_HAS_NONTRIVIAL_DESTRUCTOR (elt_type));
                                                   ^
Comment 1 Dominique d'Humieres 2015-11-17 14:30:08 UTC
I also see that on x86_64-apple-darwin14. Note that the "suggest parentheses ..." is quite unhelpful.
Comment 2 Jason Merrill 2015-11-17 18:17:01 UTC
Author: jason
Date: Tue Nov 17 18:16:29 2015
New Revision: 230470

URL: https://gcc.gnu.org/viewcvs?rev=230470&root=gcc&view=rev
Log:
	PR bootstrap/68361

	* cvt.c (cp_convert_and_check): Use warning_sentinel to suppress
	-Wparentheses.

Added:
    trunk/gcc/testsuite/g++.dg/warn/Wparentheses-28.C
Modified:
    trunk/gcc/cp/ChangeLog
    trunk/gcc/cp/cvt.c
Comment 3 Jakub Jelinek 2015-11-27 16:42:35 UTC
So fixed?
Comment 4 Drea Pinski 2016-01-05 02:01:12 UTC
Fixed.