re PR bootstrap/68361 (Bootstrap failure with --enable-checking=release)

PR bootstrap/68361

	* cvt.c (cp_convert_and_check): Use warning_sentinel to suppress
	-Wparentheses.

From-SVN: r230470